<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <ImageView
            android:id="@+id/imageViewIconGeoLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_geo_location_orange"
            app:layout_constraintBottom_toBottomOf="@id/textViewTextCity"
            app:layout_constraintEnd_toStartOf="@+id/textViewTextCity"
            app:layout_constraintTop_toTopOf="@id/textViewTextCity" />

        <TextView
            android:id="@+id/textViewTextCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:text="@string/textMockCity"
            android:textColor="@color/colorTextDarkBlue"
            android:textSize="@dimen/textSize15"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewArrowDropMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_arrow_bottom_gray"
            app:layout_constraintBottom_toBottomOf="@id/textViewTextCity"
            app:layout_constraintStart_toEndOf="@+id/textViewTextCity"
            app:layout_constraintTop_toTopOf="@id/textViewTextCity" />

        <ImageView
            android:id="@+id/imageViewFilterMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_filter"
            app:layout_constraintBottom_toBottomOf="@+id/textViewTextCity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewTextCity" />

        <TextView
            android:id="@+id/textViewSelectCategory"
            style="@style/styleTextHeader25BoldDarkBlue"
            android:text="@string/textSelectCategory"
            app:layout_constraintBottom_toTopOf="@+id/recyclerViewSelectCategory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTextCity" />

        <TextView
            style="@style/styleTextAtHeader"
            android:text="@string/textViewAll"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewSelectCategory"
            app:layout_constraintEnd_toEndOf="@+id/imageViewFilterMenu" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSelectCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/textViewSelectCategory"
            tools:listitem="@layout/item_rv_select_category" />

        <TextView
            android:id="@+id/TextViewHotSales"
            style="@style/styleTextHeader25BoldDarkBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textHotSales"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewSelectCategory" />

        <TextView
            style="@style/styleTextAtHeader"
            android:text="@string/textSeeMore"
            app:layout_constraintBaseline_toBaselineOf="@+id/TextViewHotSales"
            app:layout_constraintEnd_toEndOf="@+id/imageViewFilterMenu" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager2HotSales"
            android:layout_width="match_parent"
            android:layout_height="182dp"
            android:background="@drawable/bg_vp_hot_sales"
            app:layout_constraintTop_toBottomOf="@id/TextViewHotSales"
            tools:background="@drawable/images" />

        <TextView
            android:id="@+id/TextViewBestSeller"
            style="@style/styleTextHeader25BoldDarkBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textHotBestSeller"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewPager2HotSales" />

        <TextView
            style="@style/styleTextAtHeader"
            android:text="@string/textSeeMore"
            app:layout_constraintBaseline_toBaselineOf="@+id/TextViewBestSeller"
            app:layout_constraintEnd_toEndOf="@+id/imageViewFilterMenu" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewBestSeller"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/TextViewBestSeller"
            app:spanCount="2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>